# internal/dto/request/user_request.go
@@ -7,3 +7,9 @@ type RegisterUserRequest struct {
 	Email       string `json:"email" binding:"required,email"`
 	Password    string `json:"password" binding:"required,min=8"`
 }
+
+// LoginRequest represents the user login request payload.
+type LoginRequest struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required,min=8"`
+}
